found one more contrast issue and fixed 2.0

--- a/styles.css
+++ b/styles.css
@@ -55,9 +55,9 @@ button{
     text-align:center;
 }
 .cb{
-    color: deeppink;
+    color: darkgray;
 
-    border: 2px solid deeppink;
+    border: 2px solid darkgray;
 
 
 }
